@@ -4,5 +4,4 @@ a2,"Wood",-122.11400,38.11300,1.61307E-01,9.64504E-02,1.88133E-01,1.84156E-01,3.
 a5,"Wood",-122.00000,37.91000,3.01198E-01,1.25508E-01,1.98805E-01,1.55516E-01,2.18973E-01
 a4,"Wood",-122.00000,38.00000,1.22600E-01,7.02528E-02,1.46049E-01,1.61548E-01,4.99550E-01
 a1,"Wood",-122.00000,38.11300,6.30138E-02,3.90968E-02,9.50851E-02,1.29994E-01,6.72810E-01
-a6,"Wood",-122.00000,38.22500,1.22812E-01,7.03559E-02,1.46202E-01,1.61624E-01,4.99005E-01
 a7,"Wood",-121.88600,38.11300,1.61307E-01,9.64504E-02,1.88133E-01,1.84156E-01,3.69954E-01
