@@ -4,5 +4,4 @@ a2,"Wood",-122.11400,38.11300,1.30248E-01,8.92589E-02,2.47212E-01,1.87144E-01,3.
 a5,"Wood",-122.00000,37.91000,2.90034E-01,1.32735E-01,2.59316E-01,1.37646E-01,1.80268E-01
 a4,"Wood",-122.00000,38.00000,1.04249E-01,6.23992E-02,1.84092E-01,1.66530E-01,4.82730E-01
 a1,"Wood",-122.00000,38.11300,5.13245E-02,3.03215E-02,1.12382E-01,1.37626E-01,6.68346E-01
-a6,"Wood",-122.00000,38.22500,1.04441E-01,6.25104E-02,1.84311E-01,1.66588E-01,4.82149E-01
 a7,"Wood",-121.88600,38.11300,1.30248E-01,8.92589E-02,2.47212E-01,1.87144E-01,3.46136E-01
