@@ -4,5 +4,4 @@ a2,"Wood",-122.11400,38.11300,1.61307E-01,9.64504E-02,1.88133E-01,1.84156E-01,3.
 a5,"Steel",-122.00000,37.91000,6.52434E-01,2.22092E-01,8.48270E-02,3.21750E-02,8.47204E-03
 a4,"Concrete",-122.00000,38.00000,1.92853E-01,1.70283E-01,2.73740E-01,1.84973E-01,1.78151E-01
 a1,"Wood",-122.00000,38.11300,6.30138E-02,3.90968E-02,9.50851E-02,1.29994E-01,6.72810E-01
-a6,"Wood",-122.00000,38.22500,1.22812E-01,7.03559E-02,1.46202E-01,1.61624E-01,4.99005E-01
 a7,"Steel",-121.88600,38.11300,4.75167E-01,2.88497E-01,1.46198E-01,6.74153E-02,2.27225E-02
