@@ -1,6 +1,7 @@
 [general]
 description = Classical PSHA-Based Damage
 calculation_mode = classical_damage
+exposure_file = exposure_model.xml
 
 [boundaries]
 region_constraint = -122.6 38.2, -121.5 38.2, -121.5 37.1, -122.6 37.1
